fixed overlapping button link

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ color: skyblue;
  #hansgrohe {
     max-width: 30%;
     max-height: 30%;
+    padding-bottom: 10%;
  }
 
  .button-email {
